--- a/python_topics.ipynb
+++ b/python_topics.ipynb
@@ -1,23 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'basic python, immutable object in python, decorators in python, class methods, and how the structure is used.'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "\"\"\"basic python, immutable object in python, decorators in python, class methods, and how the structure is used.\"\"\""
+    "Per the chats, a few examples of `basic python, immutable object in python, decorators in python, class methods, and how the structure is used.` \n"
    ]
   },
   {
@@ -29,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,20 +25,20 @@
        "['__doc__', 'denominator', 'imag', 'numerator', 'real']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Attributes of boolean object. \"bool\" is the Python keyword\n",
+    "# Attributes of boolean object.\n",
     "\n",
-    "[attr for attr in dir(True) if not callable(eval(f\"bool.{attr}\"))] \n"
+    "[attr for attr in dir(True) if not callable(eval(f\"True.{attr}\"))] \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,16 +65,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "calling <method-wrapper '__setattr__' of bool object at 0x00007FF9B244DB68> with args:('real', 0) -- kwargs:{}\n",
+      "calling <method-wrapper '__setattr__' of bool object at 0x00007FF9B23FDB68> with args:('real', 0) -- kwargs:{}\n",
       "attribute 'real' of 'int' objects is not writable -- <class 'AttributeError'> in __main__\n",
       "\n",
-      "calling <method-wrapper '__getattribute__' of bool object at 0x00007FF9B244DB68> with args:('real',) -- kwargs:{}\n",
+      "calling <method-wrapper '__getattribute__' of bool object at 0x00007FF9B23FDB68> with args:('real',) -- kwargs:{}\n",
       "1\n",
       "\n",
-      "calling <method-wrapper '__setattr__' of bool object at 0x00007FF9B244DB68> with args:('imag', 1) -- kwargs:{}\n",
+      "calling <method-wrapper '__setattr__' of bool object at 0x00007FF9B23FDB68> with args:('imag', 1) -- kwargs:{}\n",
       "attribute 'imag' of 'int' objects is not writable -- <class 'AttributeError'> in __main__\n",
       "\n",
-      "calling <method-wrapper '__setattr__' of bool object at 0x00007FF9B244DB68> with args:('numerator', 0) -- kwargs:{}\n",
+      "calling <method-wrapper '__setattr__' of bool object at 0x00007FF9B23FDB68> with args:('numerator', 0) -- kwargs:{}\n",
       "attribute 'numerator' of 'int' objects is not writable -- <class 'AttributeError'> in __main__\n"
      ]
     }
@@ -108,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +104,7 @@
        "'spam'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +137,7 @@
        "'spam'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +166,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 8\u001b[0m\n\u001b[0;32m      4\u001b[0m ies\u001b[38;5;241m=\u001b[39mImmutableExampleSlots()\n\u001b[0;32m      6\u001b[0m ies\u001b[38;5;241m.\u001b[39mtest\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[43mies\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meggs\u001b[49m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspam\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "Cell \u001b[1;32mIn[6], line 10\u001b[0m\n\u001b[0;32m      6\u001b[0m ies\u001b[38;5;241m=\u001b[39mImmutableExampleSlots()\n\u001b[0;32m      8\u001b[0m ies\u001b[38;5;241m.\u001b[39mtest\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m \u001b[43mies\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meggs\u001b[49m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspam\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;66;03m# It cannot be set.\u001b[39;00m\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'ImmutableExampleSlots' object has no attribute 'eggs'"
      ]
     }
@@ -199,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +196,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mham\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m iep\u001b[38;5;241m=\u001b[39mImmutableExampleProperty()\n\u001b[1;32m----> 8\u001b[0m \u001b[43miep\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meggs\u001b[49m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspam\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "Cell \u001b[1;32mIn[7], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mham\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m iep\u001b[38;5;241m=\u001b[39mImmutableExampleProperty()\n\u001b[1;32m----> 8\u001b[0m \u001b[43miep\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meggs\u001b[49m\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspam\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;66;03m# It cannot be set.\u001b[39;00m\n",
       "\u001b[1;31mAttributeError\u001b[0m: can't set attribute 'eggs'"
      ]
     }
@@ -227,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +223,7 @@
        "user:999 phone#:+1-555-123-4567"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +257,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mFrozenInstanceError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mpn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__setattr__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43muser_id\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m1001\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mpn\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__setattr__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43muser_id\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m1001\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
       "File \u001b[1;32m<string>:4\u001b[0m, in \u001b[0;36m__setattr__\u001b[1;34m(self, name, value)\u001b[0m\n",
       "\u001b[1;31mFrozenInstanceError\u001b[0m: cannot assign to field 'user_id'"
      ]
@@ -289,16 +276,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'We can change fixed behavior using decorators.'"
+       "'We can extend fixed behavior using decorators.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +306,7 @@
     "    return decor\n",
     "\n",
     "\n",
-    "@modify_vpf(pre=\"We can change \", post=\" using decorators.\")\n",
+    "@modify_vpf(pre=\"We can extend \", post=\" using decorators.\")\n",
     "def modified_vendor_provided_functionality():\n",
     "    return(vendor_provided_functionality())\n",
     "\n",
@@ -335,16 +322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "user:TEST phone#:+83-193-670-9698"
+       "user:TEST phone#:+23-382-318-2805"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
